# oxc-css

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  release-plz.toml
.github/workflows/: CI.yml  benchmark.yml  ci.yml  release.yml
benches/: self.rs
benchmark/: Cargo.toml
benchmark/benches/: self.rs
crates/oxc_css/: Cargo.toml
crates/oxc_css_parser/: CHANGELOG.md  Cargo.toml
crates/oxc_css_parser/src/: ast.rs  ast_generated.rs
crates/oxc_css_parser/src/parser/: less.rs  macros.rs  mod.rs  selector.rs  stmt.rs  token_seq.rs  value.rs
crates/oxc_css_parser/src/parser/at_rule/: container.rs  import.rs  media.rs
crates/oxc_css_parser/src/tokenizer/: mod.rs
crates/oxc_css_parser/tests/: placeholder.rs
crates/oxc_css_parser/tests/ast/at-rule/: import.snap
crates/oxc_css_parser/tests/ast/declaration/: custom-property-arbitrary-tokens.css
crates/oxc_css_parser/tests/ast/less/: numeric-property.less
crates/oxc_css_parser_macro/: Cargo.toml
raffia/: Cargo.toml
raffia/src/: ast.rs  config.rs  lib.rs
raffia/src/parser/: less.rs  selector.rs  value.rs
raffia/src/tokenizer/: token.rs
raffia/tests/: placeholder.rs
raffia/tests/ast/selectors/: id_selector.snap
raffia/tests/recoverable/selectors/: invalid-id-selector.css.ast.snap  invalid-id-selector.css.error.snap
tasks/conformance/: Cargo.toml
tasks/conformance/snapshots/: csswg-drafts.snap  less.js.snap  postcss-parser-tests.snap  sass-spec.snap  summary.snap  wpt.snap
tasks/conformance/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+15 files in other folders)
