[package]
name = "conformance"
version = "0.0.0"
edition = "2024"
publish = false

# This is a dev task that prints reports to stdout, so it deliberately does not
# opt into the workspace's strict `print_stdout`/pedantic lints.

[[bin]]
name = "conformance"
path = "src/main.rs"

[dependencies]
oxc-css-parser = { path = "../../crates/oxc_css_parser" }
