[package]
name = "conformance"
version = "0.0.0"
edition = "2024"
description = "Conformance suite runner for oxc-css-parser."
repository = "https://github.com/oxc-project/oxc-css-parser"
license = "MIT"
publish = false

# This is a dev task that prints reports to stdout, so it deliberately does not
# opt into the workspace's strict `print_stdout`/pedantic lints.

[[bin]]
name = "conformance"
path = "src/main.rs"

[dependencies]
oxc-css-parser = { path = "../../crates/oxc_css_parser" }
